@startuml
'https://plantuml.com/class-diagram

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam roundcorner 20
hide enum methods

package "Diagramme de Classe d'Analyse" <<Folder>> {
    interface AntFacadeController <<interface>> #pink ##[bold]red {}

    class Graphe #lightcoral;line.bold {}

    class Colonie #burlywood {}

    class Noeud #burlywood {}

    class AntFacade #back:Wheat;line.bold {}

    class Aretes #burlywood {}

    interface Fourmis <<interface>> #lightgreen;line:green {}

    class Reine #lightblue;line:green {}

    abstract class FourmisMove #lightgreen;line:green {}

    class Soldat #lightblue;line:green {}
}

AntFacadeController <|.. AntFacade : <<implements>>
AntFacade .up.|> Graphe : <<instantiate>>
AntFacade ..|> Reine : <<instantiate>>

Graphe "1" *--> "1..*" Noeud : contient

FourmisMove "\t\t\t\t1" <--up* "0..*" Aretes : relie
Reine "1" *-right> "1" Colonie : appartient
Noeud "1" o--> "0..*\t" Fourmis : comporte
Fourmis <|.. Reine : <<implements>>
Fourmis <|.. FourmisMove : <<implements>>
FourmisMove <|-- Soldat
Reine "\t\t\t\t\t\t1" *-> "1..*" Soldat : Donne naissance >

@enduml